<resources>
    <string name="app_name">Sunnah Assistant</string>
    <string name="next_string">Next:</string>
    <string name="done_for_the_day">It\'s Empty Here</string>
    <string name="switch_to_dark_mode">Switch To Dark Mode</string>
    <string name="to_do_name_label">Name</string>
    <string name="to_do_name_hint">Enter The Name of The To-Do</string>
    <string name="edit_to_do">Manage To-Do</string>
    <string name="add_to_do">Add To-Do</string>
    <string name="to_do_category">Category</string>
    <string-array name="frequency">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="pick_time">Pick Time</string>
    <string name="change_time">Change Time</string>
    <string name="save">Save</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="no_changes">No Changes Made.</string>
    <string name="name_cannot_be_empty">Name Cannot Be Empty</string>
    <string name="select_days">Days</string>
    <string name="select_atleast_one_day">Select at least One Day</string>
    <string name="more_details">More Details</string>
    <string name="enter_additional_details">Enter Additional Details</string>
    <string name="settings">Settings</string>
    <string name="hijri_date_settings">Hijri Date Settings</string>
    <string name="prayer_time_settings">Prayer Time Settings</string>
    <string name="enter_city_town_name">City/Town name + Country</string>
    <string name="city_name_example">*Example:London, United Kingdom</string>
    <string name="location_hint">Enter Location</string>
    <string name="error_updating_location">Error updating Location. Please check your internet connection</string>
    <string name="prayer_time_calculation_method">Calculation Method:</string>
    <string-array name="asr_juristic_method">
        <item>Standard(Hanbali, Shafi, Maliki)</item>
        <item>Hanafi</item>
    </string-array>
    <string name="change_prayer_time_offset_by">%s Notification</string>
    <string name="prayer_offset_minute">minute(s)</string>
    <string name="value">Value</string>
    <string name="add_prayer_time">Activate automatic Salah(Prayer) time alerts</string>
    <string name="welcome">Welcome to Sunnah Assistant:</string>
    <string name="tagline">Manage all your To-Dos and Tasks to help you become a Better and More Productive Muslim</string>
    <string name="quick_setup">Get Started</string>
    <string name="delete_to_do">To-Do Deleted</string>
    <string name="undo_delete">Undo</string>
    <string name="cannot_delete_prayer_time">Automatic Prayer alerts can only be deleted from Settings</string>
    <string name="time_not_set">Time not Set</string>
    <string name="general_settings">General Settings</string>
    <string name="next_to_do_notification">Display The Next To-Do Notification</string>
    <string name="next_reminder_disclaimer">Disabling this might lead to reminders not being triggered successfully</string>
    <string name="about_app">About App</string>
    <string name="version">Version: %s</string>
    <string name="icon">app icon</string>
    <string name="credits">Credits</string>
    <string name="about">    Developed By Said Muhammad (&lt;a href=https://twitter.com/saidmsaid81/&gt;@saidmsaid81&lt;/a&gt;)
  </string>
    <string name="app_icon_credit">App logo: &lt;a href=https://www.flaticon.com/authors/sbts2018/&gt;sbts2018&lt;/a&gt;&lt;br&gt;Fasting icon: &lt;a href=https://www.flaticon.com/authors/bzzrincantation/&gt;bzzrincantation&lt;/a&gt;&lt;br&gt;Dua icon: &lt;a href=https://www.flaticon.com/authors/shmai/&gt;shmai&lt;/a&gt;&lt;br&gt;Other Icons: &lt;a href=https://www.flaticon.com/authors/freepik/&gt;Freepik&lt;/a&gt;</string>
    <string name="content_credits">Quran Madani Pages: &lt;a href=https://github.com/quran/quran.com-images&gt;quran.com-images&lt;/a&gt;&lt;br&gt;Quran Translations: &lt;a href=https://quranenc.com&gt;Quranenc.com&lt;/a&gt;&lt;br&gt;Adhkaar (Hisnul Muslim): &lt;a href=https://github.com/my-prayers/muslim-data-android&gt;muslim-data-android&lt;/a&gt;</string>
    <string name="icons">Icons</string>
    <string name="content">Content</string>
    <string name="we_are_social">Join Us on Social Media</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="no_email_app_installed">No Email App Installed</string>
    <string name="contact_us">Contact Us via E-mail</string>
    <string name="change_theme">Tap to Change Theme</string>
    <string name="change_theme_description">Dark Theme or Light Theme</string>
    <string name="add_new_to_do">Add To-Do</string>
    <string name="add_new_to_do_description">Tap To add any To-Do</string>
    <string name="edit_to_do_description">    Tap To edit To-Do
  </string>
    <string name="gestures_demo">    Swipe Gestures
  </string>
    <string name="gestures_description">    ⬅️ Swipe Left To Delete
    \n➡️ Swipe Right to Mark as Complete\n\n\n
  </string>
    <string name="spinner_tutorial">To-Do\'s Switcher</string>
    <string name="spinner_tutorial_description">Switch between today, tomorrow, weekly and monthly to-dos</string>
    <string name="support_developer">Support Developer</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="telegram_logo">Telegram Logo</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="tap_the_icon_at_the_bottom_corner_to_add_a_new_to_do">Tap the + icon at the bottom corner to add a new to-do</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="name_of_the_new_category">Name of the New Category</string>
    <string name="cancel">Cancel</string>
    <string name="display_all">All</string>
    <string name="alternate_display_of_data">Switch to Condensed View</string>
    <string name="default_display_of_data">Switch to Expanded View</string>
    <string name="display_hijri_date_on_the_home_page">Display Hijri Date on the home page</string>
    <string name="updating">Updating…</string>
    <string name="unavailable_location">Couldn\'t find this location. Please enter another location</string>
    <string name="location_cannot_be_empty">Location cannot be empty</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="importance">Behavior</string>
    <string name="next_to_do_sticky_notification">Next To-Do Sticky Notification</string>
    <string name="layout_and_theme_settings">Layout and Theme Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="layout">Layout</string>
    <string name="theme">Theme</string>
    <string name="theme_in_android_10_follows_system_settings">Follows System</string>
    <string name="dark_theme">Dark</string>
    <string name="delete_category">Delete Category?</string>
    <string name="confirm_delete_category">%s Category Deleted</string>
    <string name="category_cannot_be_deleted">%s Category cannot be deleted</string>
    <string name="customize_categories">Customize Categories</string>
    <string name="filter_displayed_to_dos">Filter Displayed To-Dos</string>
    <string name="filter_displayed_todos_description">Such as display all categories or only one category</string>
    <string name="add_sunnah_to_dos_alerts_such_as_fasting_on_mondays_and_thursdays">Tap to add Sunnah To-Dos alerts</string>
    <string name="sunnah_to_do_alerts_description">*such as Fasting on Mondays and Thursdays</string>
    <string name="add_salah_prayer_time_alerts">Tap to add Salah (Prayer) time alerts</string>
    <string name="pick_date_and_time">Pick Date and Time</string>
    <string name="please_pick_date_and_time">Please Pick Date and time</string>
    <string name="higher_latitude_adjustment_method">Higher Latitude Adjustment Method</string>
    <string name="add_widget">Add widget</string>
    <string name="display_hijri_date">Display Hijri Date</string>
    <string name="display_the_next_to_do">Display the Next To-Do</string>
    <string name="enable_at_least_one_option">Enable at least one option</string>
    <string name="setup_widget">Setup Widget</string>
    <string name="today_s_to_dos">Today\'s To-Dos</string>
    <string name="hijri_date_is_based_on_umm_al_qura_calendar_read_more_on_umm_al_qura_calendar_here_http_www_ummulqura_org_sa_default_aspx">Hijri Date used in this app is based on Umm al-Qura Calendar.\nIt should be noted that, Umm al-Qura calendar is a calculated calendar and may vary with your local moonsighting.\nTherefore, it is recommended to verify the dates here with your local moonsighting. \n\nTap to Read more on Umm al-Qura Calendar</string>
    <string name="read_more">Read more</string>
    <string name="read_more_on_dhuha_prayer">      Tap here to read more on Duha Prayer, its time and  number of rakaahs
    </string>
    <string name="what_s_new">What\'s New</string>
    <string name="important">Important</string>
    <string name="important_changes">This is the first update that introduces the new Resources tab.
\n\n        ‣ You can now access Quran and Adhkaar from one place.
\n        ‣ Added Quran reading with translations and helpful reading actions.
\n        ‣ Added Adhkaar reading with bookmarking, sharing, and easier navigation.
\n        ‣ Added a new bookmarks area and search to quickly find saved content.
\n        ‣ Added guidance nudges to help you keep up with daily Sunnah habits.
  </string>
    <string name="new_features">New Features</string>
    <string name="new_features_details">        ‣ Major redesign of the app.\n
        ‣ Introduced a calendar section which supports Gregorian Calendar and Hijri Calendar (based on Ummul-Qura Calendar).\n
        ‣ Calendar section shows a blue dot if there is a to-do on that day.\n
        ‣ Date pickers now show both Gregorian dates and Hijri dates.\n
        ‣ Introduced an option to mark a To-Do as complete or incomplete.\n
        ‣ Introduced an option to be notified of a To-Do ahead or after the set time.\n
        ‣ Option to share To-Do via your app of choice.\n
        ‣ Introduced a Tips Section containing recommended To-Dos.\n
        ‣ Introduced new options when deleting a To-Do such as only this date or only future occurrences.\n
        ‣ Introduced a Local Backup and Restore option (Experimental).\n
        ‣ Introduced a Snooze option when a notification is triggered.\n
        ‣ Introduced a Mark as Complete option when a notification is triggered.\n
        ‣ Introduced a Share To-Do option when a notification is triggered.\n
        ‣ More soon In shaa Allah.
    </string>
    <string name="updated">Updated</string>
    <string name="updated_details">        ‣ Prayer Time Settings got a major upgrade for faster, cleaner setup.\n
        ‣ Choose prayer-time mode per prayer and set precise custom times when needed.\n
        ‣ Better activation flow now guides location setup before enabling automatic prayer alerts.
    </string>
    <string name="fixes">Fixes</string>
    <string name="fixes_details">        ‣ Improved app stability and overall performance.\n
    ‣ Fixed reminder and notification issues for a smoother daily experience.
    </string>
    <string name="share_anonymous_usage_data_string">Share anonymous usage data. \nThe data will help us make the app better</string>
    <string name="by_continuing_to_use_this_app_you_agree_to_this_site_privacy_policy">By continuing to use this app, you agree to this app\'s privacy policy</string>
    <string name="read_privacy_policy">Privacy Policy</string>
</resources>