<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_dimen"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:context=".views.AboutAppFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/default_dimen"
        android:text="@string/about_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:contentDescription="@string/icon"
        android:paddingBottom="@dimen/default_dimen"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/default_dimen"
        android:text="@string/developed_by_tsr_apps"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/credits"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/api_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:textAlignment="center"
        android:text="@string/api_credit"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/app_icon_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:text="@string/app_icon_credit"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/other_icon_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:paddingBottom="@dimen/default_dimen"
        android:text="@string/other_icon_credit"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/default_dimen"
        android:text="@string/we_are_social"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/default_dimen">

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/default_dimen"
            android:contentDescription="@string/facebook_logo"
            android:src="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/default_dimen"
            android:contentDescription="@string/twitter_logo"
            android:src="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/default_dimen"
            android:contentDescription="@string/instagram_logo"
            android:src="@drawable/ic_instagram" />

        <ImageView
            android:id="@+id/telegram"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/telegram_logo"
            android:src="@drawable/ic_telegram" />


    </LinearLayout>



    <Button
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/fabColor"
        android:padding="@dimen/default_dimen"
        android:text="@string/contact_us" />

</LinearLayout>