<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.home.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/content_main"
        >
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsListFragment" />
        <action
            android:id="@+id/action_mainFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
        <action
            android:id="@+id/action_mainFragment_to_changelogFragment"
            app:destination="@id/changelogFragment" />
        <action
            android:id="@+id/action_mainFragment_to_prayerTimeSettingsFragment"
            app:destination="@id/prayerTimeSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsListFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.settings.SettingsListFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_lists">
        <action
            android:id="@+id/action_settingsListFragment_to_hijriDateSettingsFragment"
            app:destination="@id/hijriDateSettingsFragment" />
        <action
            android:id="@+id/action_settingsListFragment_to_prayerTimeSettingsFragment"
            app:destination="@id/prayerTimeSettingsFragment" />
        <action
            android:id="@+id/action_settingsListFragment_to_customizeCategoriesFragment"
            app:destination="@id/customizeCategoriesFragment" />
        <action
            android:id="@+id/action_settingsListFragment_to_notificationSettingsFragment"
            app:destination="@id/notificationSettingsFragment" />
        <action
            android:id="@+id/action_settingsListFragment_to_layoutSettingsFragment"
            app:destination="@id/layoutSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.WelcomeFragment"
        tools:layout="@layout/fragment_welcome"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_welcomeFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/changelogFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.ChangelogFragment"
        tools:layout="@layout/changelog_layout"
        android:label="@string/what_s_new" >
        <action
            android:id="@+id/action_changelogFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/hijriDateSettingsFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.settings.HijriDateSettingsFragment"
        tools:layout="@layout/hijri_date_settings"
        android:label="@string/hijri_date_settings" />
    <fragment
        android:id="@+id/prayerTimeSettingsFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.settings.PrayerTimeSettingsFragment"
        tools:layout="@layout/prayer_time_settings"
        android:label="@string/prayer_time_settings" />
    <fragment
        android:id="@+id/customizeCategoriesFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.settings.CustomizeCategoriesFragment"
        android:label="@string/customize_categories"
        tools:layout="@layout/categories_settings"/>
    <fragment
        android:id="@+id/notificationSettingsFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.settings.NotificationSettingsFragment"
        android:label="@string/notification_settings"
        tools:layout="@layout/notification_settings"/>
    <fragment
        android:id="@+id/layoutSettingsFragment"
        android:name="com.thesunnahrevival.sunnahassistant.views.settings.LayoutSettingsFragment"
        tools:layout="@layout/display_settings"
        android:label="@string/layout_and_theme_settings" />
</navigation>