<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/default_dimen"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tagline"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/quick_setup_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/tagline"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/quick_setup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/default_dimen"
        android:padding="@dimen/default_dimen"
        android:text="@string/quick_setup"
        android:textAllCaps="false"
        app:backgroundTint="@color/fabColor"
        android:textColor="@android:color/white"
        />

  <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="wrap_content"
      android:visibility="gone"
      android:layout_below="@id/quick_setup_button"
      android:layout_centerInParent="true"
      android:layout_height="wrap_content"
      />

  <CheckBox
      android:id="@+id/checkbox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/quick_setup_button"
      android:text="@string/share_anonymous_usage_data_string"
      android:layout_centerInParent="true"
      android:checked="true"
      />


  <TextView
      android:id="@+id/privacy_policy"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_above="@id/read_privacy_policy"
      android:textAlignment="center"
      android:text="@string/by_continuing_to_use_this_app_you_agree_to_this_site_privacy_policy"
       />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/read_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_dimen"
        android:textAllCaps="false"
        app:backgroundTint="@color/fabColor"
        android:text="@string/read_privacy_policy"
        android:textColor="@android:color/white"/>




</RelativeLayout>
